[package]
name = "cktool"
description = "coomer.su and kemono.su downloader tool"
version = "1.1.1"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/HermesMaker/cktool"
readme = "README.md"
categories = ["command-line-utilities"]

include = ["src/*"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4.5.61"
colored = "3.0.0"
futures-util = "0.3.31"
indicatif = "0.18.3"
json = "0.12.4"
reqwest = { version = "0.12.25", features = ["stream", "gzip"] }
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
size = "0.5.0"
url = "2.5.7"
chrono = "0.4.42"
