[package]
name = "cktool"
description = "coomer.st and kemono.cr downloader tool"
version = "1.2.0"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/HermesMaker/cktool"
readme = "README.md"
categories = ["command-line-utilities"]

include = ["src/*", "LICENSE"]

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
clap_complete = "4.5.64"
colored = "3.0.0"
futures-util = "0.3.31"
indicatif = "0.18.3"
json = "0.12.4"
reqwest = { version = "0.13.1", features = ["stream", "gzip"] }
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.100"
size = "0.5.0"
url = "2.5.7"
chrono = "0.4.42"
